feat: browser optimized image scaling on request

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="slideshow-layout">
     <image id="slideshow-image"></image>
-    <div class="label" id="slideshow-metadata">2020</div>
+    <div class="label" id="slideshow-metadata"></div>
 </div>
 </body>
 </html>
