--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,10 @@
 <div id="slideshow-layout">
     <image id="slideshow-image"></image>
     <div class="label" id="slideshow-metadata"></div>
+    <div class="weather">
+        <div id="icon"><img id="weather-icon" src="" alt="Weather icon"></div>
+        <div class="weather-temp" id="weather-temp"></div>
+    </div>
 </div>
 </body>
 </html>
