feat: home assistant weather

--- a/static/index.html
+++ b/static/index.html
@@ -10,8 +10,12 @@
     <image id="slideshow-image"></image>
     <div class="label" id="slideshow-metadata"></div>
     <div class="weather">
-        <div id="icon"><img id="weather-icon" src="" alt="Weather icon"></div>
-        <div class="weather-temp" id="weather-temp"></div>
+        <img id="weather-icon" src="" alt="Weather icon">
+        <div style="display: flex">
+            <div class="weather-label" id="weather-label"></div>
+            <div class="weather-label">,&nbsp;</div>
+            <div class="weather-label" id="weather-temperature"></div>
+        </div>
     </div>
 </div>
 </body>
