feat: #18: hide alt text if weather is disabled

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <image id="slideshow-image"></image>
     <div class="label" id="slideshow-metadata"></div>
     <div class="weather">
-        <img id="weather-icon" src="" alt="Weather icon">
+        <img id="weather-icon" src="" alt="">
         <div style="display: flex">
             <div class="weather-label" id="weather-label"></div>
             <div class="weather-label" id="weather-temperature"></div>
