feat: removed base64 image transformation and added fade in/ fade out animation

--- a/static/index.html
+++ b/static/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <div id="slideshow-layout">
-    <image id="slideshow-image"></image>
+    <div id="background-image"></div>
+    <img id="slideshow-image" alt="" src=""/>
     <div class="label" id="slideshow-metadata"></div>
     <div class="weather">
-        <img id="weather-icon" src="" alt="">
+        <img id="weather-icon" alt="" src="">
         <div style="display: flex">
             <div class="weather-label" id="weather-label"></div>
             <div class="weather-label" id="weather-temperature"></div>
