feat(hide): Filter resources for hidden entries, and implement frontend handling for when no photos found

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,4 +1,5 @@
-<html lang="de">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>This week in past</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
