--- a/web-app/index.html
+++ b/web-app/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="slideshow-layout">
     <div id="background-image"></div>
-    <img id="slideshow-image" alt="" src="file:///home/rouven/Pictures/IMG_8468.png"/>
-    <img id="hide-current-image" src="assets/hide.svg"/>
+    <img id="slideshow-image" alt="" src=""/>
+    <img id="hide-current-image" src="assets/hide.png" alt=""/>
     <div class="label" id="slideshow-metadata"></div>
     <div class="weather">
         <img id="weather-icon" alt="" src="">
