feat(web-app): inlclude static webapp files in the binary

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -5,12 +5,13 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <script src="script.js"></script>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="icon.png">
 </head>
 <body>
 <div id="slideshow-layout">
     <div id="background-image"></div>
     <img id="slideshow-image" alt="" src=""/>
-    <img id="hide-current-image" src="assets/hide.png" alt=""/>
+    <img id="hide-current-image" src="images/hide.png" alt=""/>
     <div class="label" id="slideshow-metadata"></div>
     <div class="weather">
         <img id="weather-icon" alt="" src="">
