feat(web-app): allow overwriting parameter via url

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -16,7 +16,7 @@
     <div class="weather">
         <img id="weather-icon" alt="" src="">
         <div style="display: flex">
-            <div class="weather-label" id="weather-label"></div>
+            <div class="weather-label" id="weather-label" style="margin-right: 5px;"></div>
             <div class="weather-label" id="weather-temperature"></div>
         </div>
     </div>
