feat: add slideshow screen navigation

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -20,6 +20,11 @@
             <div class="weather-label" id="weather-temperature"></div>
         </div>
     </div>
+    <div id="control-panel">
+        <div id="prev-zone" onclick="showPrevImage()"></div>
+        <div id="pause-zone" onclick="pauseResumeSlideshow()"></div>
+        <div id="next-zone" onclick="showNextImage()"></div>
+    </div>
 </div>
 </body>
 </html>
